# brain-machine-bevy

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  android-env.sh  release.sh  setup-android.sh  setup-ubuntu.sh  setup-ubuntu2504.sh  setup-wasm.sh
.cargo/: config.toml
.github/workflows/: docker.yaml
android/: settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/brain_machine/bevy_app/: MainActivity.java
android/app/src/main/java/dev/smartrobot/bevy_app/: MainActivity.java
android/gradle/: libs.versions.toml
dev-book/: README.md  bevy-quick-start.md
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
src/: main.rs
web/: index.html
web-app/: index.html
